some more tweaks to the thoughts and i deleted the rows that make hour schedule append in get_grade_schedule, because it is already filled in get_classroom_schedule

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
         {% endif %}
     </table>
     <div>
-        <h1>Thoughts</h1>
+        <h1>Thought</h1>
         {% if shower_thought != None %}
             <p>
                 {{ shower_thought }}
